--- a/hugo.toml
+++ b/hugo.toml
@@ -7,13 +7,36 @@ title = 'My New Hugo Site'
 path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
 
 [[menu.main]]
-    name = "首页"
-    url = "/"
-    weight = 10
-    pre = "fa-solid fa-house"
+  name = "首页"
+  url = "/"
+  weight = 10
+  pre = "fa-solid fa-house"
 
 [[menu.main]]
-    name = "关于"
-    url = "/about/"
-    weight = 20
-    pre = "fa-solid fa-house"
+  name = "关于"
+  url = "/about/"
+  weight = 20
+  pre = "fa-solid fa-house"
+
+[params]
+
+  [[params.social]]
+    type = "github"
+    id = "yourusername"  # 或直接使用 url = "https://github.com/yourusername"
+    icon = "fab fa-github"
+  
+  [[params.social]]
+    type = "twitter"
+    id = "yourhandle"
+    icon = "fab fa-twitter"
+  
+  [[params.social]]
+    type = "email"
+    id = "your.email@example.com"  # 会被自动分割处理
+    icon = "fas fa-envelope"
+  
+  [[params.social]]
+    type = "rss"
+    icon = "fas fa-rss"
+    noblank = true  # 不在新窗口打开
+  
