--- a/hugo.toml
+++ b/hugo.toml
@@ -2,6 +2,10 @@ baseURL = 'https://example.org/'
 languageCode = 'en-us'
 title = 'Chirpy'
 
+[taxonomies]
+  category = "categories"
+  tag = "tags"
+
 [module]
 [[module.imports]]
 path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
@@ -16,6 +20,24 @@ path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
   name = "About"
   url = "/about/"
   weight = 20
+  pre = "fa-solid fa-house"
+
+[[menu.main]]
+  name = "Categories"
+  url = "/categories/"
+  weight = 30
+  pre = "fa-solid fa-house"
+
+[[menu.main]]
+  name = "Tags"
+  url = "/tags/"
+  weight = 40
+  pre = "fa-solid fa-house"
+
+[[menu.main]]
+  name = "Archives"
+  url = "/archives/"
+  weight = 50
   pre = "fa-solid fa-house"
 
 [params]
