--- a/hugo.toml
+++ b/hugo.toml
@@ -43,6 +43,7 @@ path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
 [params]
   theme_version = "5.2.0"
   toc = true
+  avatar = "img/commons/avatar.jpg"
 
 [params.assets]
   self_host = false
