update demo posts

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,7 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-us'
 title = 'Chirpy'
+enableGitInfo = true
 
 [taxonomies]
   category = "categories"
