--- a/hugo.toml
+++ b/hugo.toml
@@ -4,6 +4,28 @@ title = 'Chirpy'
 enableGitInfo = true
 paginate = 5  # 每页显示的文章数量
 
+[outputs]
+    home = ["HTML", "RSS", "JSON"]
+
+[markup.highlight]
+  anchorLineNos = false
+  codeFences = true
+  guessSyntax = true
+  hl_Lines = ''
+  hl_inline = false
+  lineAnchors = ''
+  lineNoStart = 1
+  lineNos = true
+  lineNumbersInTable = true
+  noClasses = false
+  tabWidth = 4
+  wrapperClass = 'highlight'
+[markup.goldmark.parser.attribute]
+  block = true
+  title = true
+[markup.goldmark.renderer]
+  unsafe = true
+
 [taxonomies]
   category = "categories"
   tag = "tags"
