fix: deprecated paginate

--- a/hugo.toml
+++ b/hugo.toml
@@ -2,10 +2,12 @@ baseURL = 'https://example.org/'
 languageCode = 'en-us'
 title = 'Chirpy'
 enableGitInfo = true
-paginate = 5  # 每页显示的文章数量
+
+[pagination]
+  pagerSize = 5
 
 [outputs]
-    home = ["HTML", "RSS", "JSON"]
+  home = ["HTML", "RSS", "JSON"]
 
 [markup.highlight]
   anchorLineNos = false
