--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,20 @@
 baseURL = 'https://example.org/'
-languageCode = 'en-us'
 title = 'Chirpy'
 enableGitInfo = true
+
+defaultContentLanguage = "en"
+defaultContentLanguageInSubdir = false
+
+[languages]
+  [languages.zh]
+    languageName = "中文"
+    languageCode = "zh-CN"
+    weight = 1
+
+  [languages.en]
+    languageName = "English"
+    languageCode = "en"
+    weight = 2
 
 [pagination]
   pagerSize = 5
@@ -36,32 +49,62 @@ enableGitInfo = true
 [[module.imports]]
 path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
 
-[[menu.main]]
+[[languages.en.menu.main]]
   name = "Home"
   url = "/"
   weight = 10
   pre = "fa-house"
 
-[[menu.main]]
+[[languages.en.menu.main]]
   name = "Categories"
   url = "/categories/"
   weight = 20
   pre = "fa-stream"
 
-[[menu.main]]
+[[languages.en.menu.main]]
   name = "Tags"
   url = "/tags/"
   weight = 30
   pre = "fa-tags"
 
-[[menu.main]]
+[[languages.en.menu.main]]
   name = "Archives"
   url = "/archives/"
   weight = 40
   pre = "fa-archive"
 
-[[menu.main]]
+[[languages.en.menu.main]]
   name = "About"
+  url = "/about/"
+  weight = 50
+  pre = "fa-info-circle"
+
+[[languages.zh.menu.main]]
+  name = "主页"
+  url = "/"
+  weight = 10
+  pre = "fa-house"
+
+[[languages.zh.menu.main]]
+  name = "分类"
+  url = "/categories/"
+  weight = 20
+  pre = "fa-stream"
+
+[[languages.zh.menu.main]]
+  name = "标签"
+  url = "/tags/"
+  weight = 30
+  pre = "fa-tags"
+
+[[languages.zh.menu.main]]
+  name = "归档"
+  url = "/archives/"
+  weight = 40
+  pre = "fa-archive"
+
+[[languages.zh.menu.main]]
+  name = "关于"
   url = "/about/"
   weight = 50
   pre = "fa-info-circle"
