chore: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@
 hugo_stats.json
 _vendor/
 
+# Example Site
+/exampleSite/public/
+/exampleSite/resources/_gen/
+/exampleSite/assets/jsconfig.json
+/exampleSite/.hugo_build.lock
+
 # Executable may be added to repository
 hugo.exe
 hugo.darwin
